# python-project-lvl1

./: .travis.yml  README.md  pyproject.toml  setup.py
GeVhoo_brain_games.egg-info/: PKG-INFO  SOURCES.txt
brain_games/: cli.py  engine.py
brain_games/games/: calculator.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py
brain_games/scripts/games/: brain-progression.py  brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
gevhoo_brain_games.egg-info/: PKG-INFO  SOURCES.txt
